feat: Задачи можно добавлять и удалять. Также они сохраняются в локальном хранилище

--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -14,7 +14,7 @@
       </div>
       <button id="addTask">+</button>
     </div>
-    <ul id="tasksList">
+    <ul id="taskList">
       <!-- <li class="no-tasks">
         <h1>No tasks</h1>
       </li> -->
