feat: Выводит "No tasks" при отсутствии задач

--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -18,7 +18,7 @@
       <!-- <li class="no-tasks">
         <h1>No tasks</h1>
       </li> -->
-      <!-- <li>
+      <!-- <li class="task">
         <div class="container">
           <div class="container__text">
             <h1>Example title</h1>
