add: Добавлен файл со стилями для окна подтверждения удаления

--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -33,6 +33,13 @@
         </div>
       </li> -->
     </ul>
+    <!-- <div class="delete-task">
+      <h1>Delete this task?</h1>
+      <div class="delete-task__buttons">
+        <button>Yes</button>
+        <button>No</button>
+      </div>
+    </div> -->
     <script src="../scripts/script.js"></script>
   </body>
 </html>
