--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -33,11 +33,13 @@
         </div>
       </li> -->
     </ul>
-    <!-- <div class="delete-task">
-      <h1>Delete this task?</h1>
-      <div class="delete-task__buttons">
-        <button>Yes</button>
-        <button>No</button>
+    <!-- <div class="overlay">
+      <div class="delete-task">
+        <h1>Delete this task?</h1>
+        <div class="delete-task__buttons">
+          <button>Yes</button>
+          <button>No</button>
+        </div>
       </div>
     </div> -->
     <script src="../scripts/script.js"></script>
