add: Добавлены стили для окна с редактированием задачи

--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -33,15 +33,16 @@
         </div>
       </li> -->
     </ul>
-    <!-- <div class="overlay">
-      <div class="delete-task">
-        <h1>Delete this task?</h1>
-        <div class="delete-task__buttons">
-          <button>Yes</button>
-          <button>No</button>
+    <div class="overlay">
+      <div class="edit">
+        <input type="text" class="edit__mini-input" placeholder="Mini input" />
+        <textarea class="edit__max-input" placeholder="Max input"></textarea>
+        <div class="edit__buttons">
+          <button>Cancel</button>
+          <button>Save</button>
         </div>
       </div>
-    </div> -->
+    </div>
     <script src="../scripts/script.js"></script>
   </body>
 </html>
