feat: Редкатирование задачи через отдельное окно

--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -33,7 +33,7 @@
         </div>
       </li> -->
     </ul>
-    <div class="overlay">
+    <!-- <div class="overlay">
       <div class="edit">
         <input type="text" class="edit__mini-input" placeholder="Mini input" />
         <textarea class="edit__max-input" placeholder="Max input"></textarea>
@@ -42,7 +42,7 @@
           <button>Save</button>
         </div>
       </div>
-    </div>
+    </div> -->
     <script src="../scripts/script.js"></script>
   </body>
 </html>
