feat: Добавлено окно с кнопками для отправки

--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -34,13 +34,20 @@
       </li> -->
     </ul>
     <!-- <div class="overlay">
-      <div class="edit">
-        <input type="text" class="edit__mini-input" placeholder="Mini input" />
-        <textarea class="edit__max-input" placeholder="Max input"></textarea>
-        <div class="edit__buttons">
-          <button>Cancel</button>
-          <button>Save</button>
-        </div>
+      <div class="share">
+        <button>
+          <img src="../../assets/images/share/copy.svg" alt="copy" />
+        </button>
+        <button><img src="../../assets/images/share/vk.svg" alt="vk" /></button>
+        <button>
+          <img src="../../assets/images/share/telegram.svg" alt="teleram" />
+        </button>
+        <button>
+          <img src="../../assets/images/share/whatsapp.svg" alt="whatsapp" />
+        </button>
+        <button>
+          <img src="../../assets/images/share/facebook.svg" alt="facebook" />
+        </button>
       </div>
     </div> -->
     <script src="../scripts/script.js"></script>
