refactor: Убраны заглушки

--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -14,42 +14,7 @@
       </div>
       <button id="addTask">+</button>
     </div>
-    <ul id="taskList">
-      <!-- <li class="no-tasks">
-        <h1>No tasks</h1>
-      </li> -->
-      <!-- <li class="task">
-        <div class="container">
-          <div class="container__text">
-            <h1>Example title</h1>
-            <h2>Example about</h2>
-          </div>
-          <button>x</button>
-        </div>
-        <div class="menu">
-          <button><img src="../../assets/menu/share.svg" alt="share" /></button>
-          <button><img src="../../assets/menu/info.svg" alt="info" /></button>
-          <button><img src="../../assets/menu/edit.svg" alt="edit" /></button>
-        </div>
-      </li> -->
-    </ul>
-    <!-- <div class="overlay">
-      <div class="share">
-        <button>
-          <img src="../../assets/images/share/copy.svg" alt="copy" />
-        </button>
-        <button><img src="../../assets/images/share/vk.svg" alt="vk" /></button>
-        <button>
-          <img src="../../assets/images/share/telegram.svg" alt="teleram" />
-        </button>
-        <button>
-          <img src="../../assets/images/share/whatsapp.svg" alt="whatsapp" />
-        </button>
-        <button>
-          <img src="../../assets/images/share/facebook.svg" alt="facebook" />
-        </button>
-      </div>
-    </div> -->
+    <ul id="taskList"></ul>
     <script src="../scripts/script.js"></script>
   </body>
 </html>
