--- a/src/pages/main_page.html
+++ b/src/pages/main_page.html
@@ -15,6 +15,6 @@
       <button id="addTask">+</button>
     </div>
     <ul id="taskList"></ul>
-    <script src="../scripts/script.js"></script>
+    <script type="module" src="../scripts/script.mjs" defer></script>
   </body>
 </html>
